--- a/config/settings-dev.conf
+++ b/config/settings-dev.conf
@@ -19,11 +19,11 @@ PROXY_PORT =
 [social]
 GOOGLE_CLIENT_ID = 896765768628-b1tut5g6hjin7iin6hn4qo8lt3b6ihlt.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET = CkwHCSJjYh9rViLYXAVOc7BA
-FACEBOOK_CLIENT_ID = 442437425952587
-FACEBOOK_CLIENT_SECRET = d380d5ecac943a54831ebefec22a86d9
+FACEBOOK_CLIENT_ID = 435328606663469
+FACEBOOK_CLIENT_SECRET = 3f2e953dbfebc98a2ea2fc888266f1c4
 
 [deployment]
-WEB_VERSION = v0.9.10
+WEB_VERSION = v0.9.11
 KUJON_SECURE_COOKIE = KUJON_SECURE_COOKIE_DEV
 KUJON_MOBI_REGISTER = KUJON_MOBI_REGISTER_DEV
 
@@ -36,7 +36,7 @@ DEPLOY_WEB = http://localhost:8888
 CALLBACK_URL = http://localhost:8881/authentication/verify
 
 EVENT_PORT = 8882
-DEPLOY_EVENT =  https://event.kujon.mobi
+DEPLOY_EVENT =  https://event-demo.kujon.mobi/
 LOG_LEVEL = DEBUG
 
 [email]
