--- a/config/settings-tests.conf
+++ b/config/settings-tests.conf
@@ -15,6 +15,8 @@ UNICODE = UTF-8
 [proxy]
 PROXY_URL =
 PROXY_PORT =
+#PROXY_URL =
+#PROXY_PORT =
 
 [social]
 GOOGLE_CLIENT_ID = 896765768628-b1tut5g6hjin7iin6hn4qo8lt3b6ihlt.apps.googleusercontent.com
@@ -23,7 +25,7 @@ FACEBOOK_CLIENT_ID = 442437425952587
 FACEBOOK_CLIENT_SECRET = d380d5ecac943a54831ebefec22a86d9
 
 [deployment]
-WEB_VERSION = v0.9.10
+WEB_VERSION = v0.9.11
 KUJON_SECURE_COOKIE = KUJON_SECURE_COOKIE_TESTS
 KUJON_MOBI_REGISTER = KUJON_MOBI_REGISTER_TESTS
 
@@ -33,7 +35,7 @@ DEPLOY_API = http://localhost:7881
 
 WEB_PORT = 7888
 DEPLOY_WEB = http://localhost:7888
-CALLBACK_URL = http://localhost:8881/authentication/verify
+CALLBACK_URL = http://localhost:7881/authentication/verify
 
 EVENT_PORT = 7882
 DEPLOY_EVENT =  https://event.kujon.mobi
