--- a/config/settings-demo.conf
+++ b/config/settings-demo.conf
@@ -40,6 +40,9 @@ EVENT_PORT = 9004
 DEPLOY_EVENT =  https://event-demo.kujon.mobi
 LOG_LEVEL = DEBUG
 
+ADMIN_PORT = 9005
+ADMIN_WEB = http://admin-demo.kujon.mobi
+
 [email]
 SMTP_HOST = localhost
 SMTP_PORT = 25
