--- a/config/settings-prod.conf
+++ b/config/settings-prod.conf
@@ -39,6 +39,9 @@ EVENT_PORT = 8004
 DEPLOY_EVENT =  https://event.kujon.mobi
 LOG_LEVEL = INFO
 
+ADMIN_PORT = 8005
+ADMIN_WEB = http://admin.kujon.mobi
+
 [email]
 SMTP_HOST = localhost
 SMTP_PORT = 25
