--- a/config/settings-tests.conf
+++ b/config/settings-tests.conf
@@ -41,6 +41,9 @@ EVENT_PORT = 7882
 DEPLOY_EVENT =  https://event.kujon.mobi
 LOG_LEVEL = DEBUG
 
+ADMIN_PORT =
+ADMIN_WEB =
+
 [email]
 SMTP_HOST = localhost
 SMTP_PORT = 8825
