--- a/config/settings-dev.conf
+++ b/config/settings-dev.conf
@@ -13,8 +13,8 @@ COMPRESS_RESPONSE = True
 UNICODE = UTF-8
 
 [proxy]
-PROXY_URL =
-PROXY_PORT =
+PROXY_URL = proxy.bbn.hp.com
+PROXY_PORT = 8080
 
 [social]
 GOOGLE_CLIENT_ID = 896765768628-b1tut5g6hjin7iin6hn4qo8lt3b6ihlt.apps.googleusercontent.com
@@ -38,6 +38,9 @@ CALLBACK_URL = http://localhost:8881/authentication/verify
 EVENT_PORT = 8882
 DEPLOY_EVENT =  https://event-demo.kujon.mobi/
 LOG_LEVEL = DEBUG
+
+ADMIN_PORT = 8883
+ADMIN_WEB = http://localhost:8883
 
 [email]
 SMTP_HOST = localhost
