https://kujon-admin-demo

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -36,6 +36,9 @@ http {
         server 127.0.0.1:9004;
     }
 
+    upstream kujon-admin-demo {
+        server 127.0.0.1:9005;
+    }
 
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
@@ -77,7 +80,8 @@ http {
     
 
     server {
-	listen 80;
+        listen 80;
+        listen [::]:80 ipv6only=on;	
 	server_name _;
 	rewrite ^ https://$host$request_uri? permanent;
     }
@@ -86,6 +90,7 @@ http {
 
     server {
         listen 443 ssl;
+        listen [::]:443 ssl;
         server_tokens off;
         server_name kujon.mobi;
 
@@ -113,6 +118,7 @@ http {
 
     server {
         listen 443 ssl;
+        listen [::]:443 ssl;
 	server_tokens off;
         server_name api.kujon.mobi;
 
@@ -134,6 +140,7 @@ http {
 
     server {
         listen 443 ssl;
+        listen [::]:443 ssl;
         server_tokens off;
         server_name event.kujon.mobi;
 
@@ -155,6 +162,7 @@ http {
 
     server {
         listen 443 ssl;
+        listen [::]:443 ssl;
         server_tokens off;
         server_name demo.kujon.mobi;
 
@@ -181,6 +189,7 @@ http {
  
     server {
         listen 443 ssl;
+        listen [::]:443 ssl;
         server_tokens off;
         server_name api-demo.kujon.mobi;
         
@@ -202,6 +211,7 @@ http {
 
     server {
         listen 443 ssl;
+        listen [::]:443 ssl;
         server_tokens off;
         server_name event-demo.kujon.mobi;
 
@@ -216,6 +226,26 @@ http {
             proxy_set_header X-Scheme $scheme;
             proxy_pass_header X-Hub-Signature;
             proxy_pass https://kujon-event-demo;
+        }
+    }
+
+    server {
+        listen 443 ssl;
+        listen [::]:443 ssl;
+        server_tokens off;
+        server_name admin-demo.kujon.mobi;
+
+        access_log /var/log/nginx/access-kujon-demo.log;
+        error_log /var/log/nginx/error-kujon-demo.log;
+
+        location / {
+            # proxy_pass_header Server;
+            proxy_set_header Host $http_host;
+            proxy_redirect off;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Scheme $scheme;
+            proxy_pass_header X-Hub-Signature;
+            proxy_pass https://kujon-admin-demo;
         }
     }
 
