--- a/config/kujonmobi-prod.conf
+++ b/config/kujonmobi-prod.conf
@@ -1,124 +1,150 @@
 [group:kujon-prod]
-programs=kujon-prod-api,kujon-prod-web,kujon-prod-event,kujon-prod-crawler,kujon-prod-emailer
+programs = kujon-prod-api,kujon-prod-web,kujon-prod-event,kujon-prod-crawler,kujon-prod-emailer
 
 [program:kujon-prod-api]
 command=/usr/bin/python3 /home/appuser/prod.kujon.mobi/current/api/server.py --environment=production
 user=appuser
 environment=HOME="/home/appuser/prod.kujon.mobi",USER="appuser",PYTHONPATH=/home/appuser/prod.kujon.mobi/current
-stderr_logfile=/home/appuser/prod.kujon.mobi/log/%(program_name)s-err.log
-stdout_logfile=/home/appuser/prod.kujon.mobi/log/%(program_name)s-out.log
-logfile_maxbytes=10MB
-logfile_backups=50
-stopsignal=QUIT
+stderr_logfile = /home/appuser/prod.kujon.mobi/log/%(program_name)s-err.log
+stdout_logfile = /home/appuser/prod.kujon.mobi/log/%(program_name)s-out.log
+logfile_maxbytes = 10MB
+logfile_backups = 50
+stopsignal=INT
 stopwaitsecs=10
-stopasgroup=true
-killasgroup=true
+stopasgroup = true
+killasgroup = true
 
 [program:kujon-prod-web]
 command=/usr/bin/python3 /home/appuser/prod.kujon.mobi/current/web/server.py --environment=production
 user=appuser
 environment=HOME="/home/appuser/prod.kujon.mobi",USER="appuser",PYTHONPATH=/home/appuser/prod.kujon.mobi/current
-stderr_logfile=/home/appuser/prod.kujon.mobi/log/%(program_name)s-err.log
-stdout_logfile=/home/appuser/prod.kujon.mobi/log/%(program_name)s-out.log
-logfile_maxbytes=10MB
-logfile_backups=50
-stopsignal=QUIT
+stderr_logfile = /home/appuser/prod.kujon.mobi/log/%(program_name)s-err.log
+stdout_logfile = /home/appuser/prod.kujon.mobi/log/%(program_name)s-out.log
+logfile_maxbytes = 10MB
+logfile_backups = 50
+stopsignal=INT
 stopwaitsecs=10
-stopasgroup=true
-killasgroup=true
+stopasgroup = true
+killasgroup = true
 
 [program:kujon-prod-event]
 command=/usr/bin/python3 /home/appuser/prod.kujon.mobi/current/event/server.py --environment=production
 user=appuser
 environment=HOME="/home/appuser/prod.kujon.mobi",USER="appuser",PYTHONPATH=/home/appuser/prod.kujon.mobi/current
-stderr_logfile=/home/appuser/prod.kujon.mobi/log/%(program_name)s-err.log
-stdout_logfile=/home/appuser/prod.kujon.mobi/log/%(program_name)s-out.log
-logfile_maxbytes=10MB
-logfile_backups=50
-stopsignal=QUIT
+stderr_logfile = /home/appuser/prod.kujon.mobi/log/%(program_name)s-err.log
+stdout_logfile = /home/appuser/prod.kujon.mobi/log/%(program_name)s-out.log
+logfile_maxbytes = 10MB
+logfile_backups = 50
+stopsignal=INT
 stopwaitsecs=10
-stopasgroup=true
-killasgroup=true
+stopasgroup = true
+killasgroup = true
 
 [program:kujon-prod-crawler]
 command=/usr/bin/python3 /home/appuser/prod.kujon.mobi/current/crawler/usos_crawler.py --environment=production
 user=appuser
 environment=HOME="/home/appuser/prod.kujon.mobi",USER="appuser",PYTHONPATH=/home/appuser/prod.kujon.mobi/current
-stderr_logfile=/home/appuser/prod.kujon.mobi/log/%(program_name)s-err.log
-stdout_logfile=/home/appuser/prod.kujon.mobi/log/%(program_name)s-out.log
-logfile_maxbytes=10MB
-logfile_backups=50
-stopsignal=QUIT
+stderr_logfile = /home/appuser/prod.kujon.mobi/log/%(program_name)s-err.log
+stdout_logfile = /home/appuser/prod.kujon.mobi/log/%(program_name)s-out.log
+logfile_maxbytes = 10MB
+logfile_backups = 50
+stopsignal=INT
 stopwaitsecs=10
-stopasgroup=true
-killasgroup=true
+stopasgroup = true
+killasgroup = true
 
 [program:kujon-prod-emailer]
 command=/usr/bin/python3 /home/appuser/prod.kujon.mobi/current/crawler/emailer.py --environment=production
 user=appuser
 environment=HOME="/home/appuser/prod.kujon.mobi",USER="appuser",PYTHONPATH=/home/appuser/prod.kujon.mobi/current
-stderr_logfile=/home/appuser/prod.kujon.mobi/log/%(program_name)s-err.log
-stdout_logfile=/home/appuser/prod.kujon.mobi/log/%(program_name)s-out.log
-logfile_maxbytes=10MB
-logfile_backups=50
-stopsignal=QUIT
+stderr_logfile = /home/appuser/prod.kujon.mobi/log/%(program_name)s-err.log
+stdout_logfile = /home/appuser/prod.kujon.mobi/log/%(program_name)s-out.log
+logfile_maxbytes = 10MB
+logfile_backups = 50
+stopsignal=INT
 stopwaitsecs=10
-stopasgroup=true
-killasgroup=true
+stopasgroup = true
+killasgroup = true
 
 ########## DEMO ###########
 [group:kujon-demo]
-programs=kujon-demo-api,kujon-demo-web,kujon-demo-event,kujon-demo-crawler
+programs = kujon-demo-api,kujon-demo-web,kujon-demo-event,kujon-demo-crawler,kujon-demo-emailer,kujon-demo-admin
 
 [program:kujon-demo-api]
 command=/usr/bin/python3 /home/appuser/demo.kujon.mobi/current/api/server.py --environment=demo
 user=appuser
 environment=HOME="/home/appuser/demo.kujon.mobi",USER="appuser",PYTHONPATH=/home/appuser/demo.kujon.mobi/current
-stderr_logfile=/home/appuser/demo.kujon.mobi/log/%(program_name)s-err.log
-stdout_logfile=/home/appuser/demo.kujon.mobi/log/%(program_name)s-out.log
-logfile_maxbytes=10MB
-logfile_backups=50
-stopsignal=INT
-stopwaitsecs=10
-stopasgroup=true
-killasgroup=true
+stderr_logfile = /home/appuser/demo.kujon.mobi/log/%(program_name)s-err.log
+stdout_logfile = /home/appuser/demo.kujon.mobi/log/%(program_name)s-out.log
+logfile_maxbytes = 10MB
+logfile_backups = 50
+stopsignal = INT
+stopwaitsecs = 10
+stopasgroup = true
+killasgroup = true
 
 [program:kujon-demo-web]
 command=/usr/bin/python3 /home/appuser/demo.kujon.mobi/current/web/server.py --environment=demo
 user=appuser
 environment=HOME="/home/appuser/demo.kujon.mobi",USER="appuser",PYTHONPATH=/home/appuser/demo.kujon.mobi/current
-stderr_logfile=/home/appuser/demo.kujon.mobi/log/%(program_name)s-err.log
-stdout_logfile=/home/appuser/demo.kujon.mobi/log/%(program_name)s-out.log
-logfile_maxbytes=10MB
-logfile_backups=50
-stopsignal=INT
-stopwaitsecs=10
-stopasgroup=true
-killasgroup=true
+stderr_logfile = /home/appuser/demo.kujon.mobi/log/%(program_name)s-err.log
+stdout_logfile = /home/appuser/demo.kujon.mobi/log/%(program_name)s-out.log
+logfile_maxbytes = 10MB
+logfile_backups = 50
+stopsignal = INT
+stopwaitsecs = 10
+stopasgroup = true
+killasgroup = true
 
 [program:kujon-demo-event]
 command=/usr/bin/python3 /home/appuser/demo.kujon.mobi/current/event/server.py --environment=demo
 user=appuser
 environment=HOME="/home/appuser/demo.kujon.mobi",USER="appuser",PYTHONPATH=/home/appuser/demo.kujon.mobi/current
-stderr_logfile=/home/appuser/demo.kujon.mobi/log/%(program_name)s-err.log
-stdout_logfile=/home/appuser/demo.kujon.mobi/log/%(program_name)s-out.log
-logfile_maxbytes=10MB
-logfile_backups=50
-stopsignal=INT
-stopwaitsecs=10
-stopasgroup=true
-killasgroup=true
+stderr_logfile = /home/appuser/demo.kujon.mobi/log/%(program_name)s-err.log
+stdout_logfile = /home/appuser/demo.kujon.mobi/log/%(program_name)s-out.log
+logfile_maxbytes = 10MB
+logfile_backups = 50
+stopsignal = INT
+stopwaitsecs = 10
+stopasgroup = true
+killasgroup = true
 
 [program:kujon-demo-crawler]
 command=/usr/bin/python3 /home/appuser/demo.kujon.mobi/current/crawler/usos_crawler.py --environment=demo
 user=appuser
 environment=HOME="/home/appuser/demo.kujon.mobi",USER="appuser",PYTHONPATH=/home/appuser/demo.kujon.mobi/current
-stderr_logfile=/home/appuser/demo.kujon.mobi/log/%(program_name)s-err.log
-stdout_logfile=/home/appuser/demo.kujon.mobi/log/%(program_name)s-out.log
-logfile_maxbytes=10MB
-logfile_backups=50
+stderr_logfile = /home/appuser/demo.kujon.mobi/log/%(program_name)s-err.log
+stdout_logfile = /home/appuser/demo.kujon.mobi/log/%(program_name)s-out.log
+logfile_maxbytes = 10MB
+logfile_backups = 50
+stopsignal = INT
+stopwaitsecs = 10
+stopasgroup = true
+killasgroup = true
+
+[program:kujon-demo-emailer]
+command=/usr/bin/python3 /home/appuser/demo.kujon.mobi/current/crawler/emailer.py --environment=demo
+user=appuser
+environment=HOME="/home/appuser/demo.kujon.mobi",USER="appuser",PYTHONPATH=/home/appuser/demo.kujon.mobi/current
+stderr_logfile = /home/appuser/demo.kujon.mobi/log/%(program_name)s-err.log
+stdout_logfile = /home/appuser/demo.kujon.mobi/log/%(program_name)s-out.log
+logfile_maxbytes = 10MB
+logfile_backups = 50
 stopsignal=INT
 stopwaitsecs=10
-stopasgroup=true
-killasgroup=true
+stopasgroup = true
+killasgroup = true
+
+[program:kujon-demo-admin]
+command=/usr/bin/python3 /home/appuser/demo.kujon.mobi/current/admin/server.py --environment=demo
+user=appuser
+environment=HOME="/home/appuser/demo.kujon.mobi",USER="appuser",PYTHONPATH=/home/appuser/demo.kujon.mobi/current
+stderr_logfile = /home/appuser/demo.kujon.mobi/log/%(program_name)s-err.log
+stdout_logfile = /home/appuser/demo.kujon.mobi/log/%(program_name)s-out.log
+logfile_maxbytes = 10MB
+logfile_backups = 50
+stopsignal = INT
+stopwaitsecs = 10
+stopasgroup = true
+killasgroup = true
 
