--- a/config/settings-dev.conf
+++ b/config/settings-dev.conf
@@ -13,8 +13,8 @@ COMPRESS_RESPONSE = True
 UNICODE = UTF-8
 
 [proxy]
-PROXY_URL = proxy.bbn.hp.com
-PROXY_PORT = 8080
+PROXY_URL =
+PROXY_PORT = 
 
 [social]
 GOOGLE_CLIENT_ID = 896765768628-b1tut5g6hjin7iin6hn4qo8lt3b6ihlt.apps.googleusercontent.com
