--- a/config/settings-tests.conf
+++ b/config/settings-tests.conf
@@ -11,12 +11,11 @@ DEBUG = True
 RELOAD = False
 COMPRESS_RESPONSE = True
 UNICODE = UTF-8
+PREPARE_CURL_CALLBACK = True
 
 [proxy]
 PROXY_URL =
 PROXY_PORT =
-#PROXY_URL =
-#PROXY_PORT =
 
 [social]
 GOOGLE_CLIENT_ID = 896765768628-b1tut5g6hjin7iin6hn4qo8lt3b6ihlt.apps.googleusercontent.com
