/config Cannot write() after finish()

--- a/config/settings-demo.conf
+++ b/config/settings-demo.conf
@@ -11,7 +11,7 @@ DEBUG = True
 RELOAD = False
 COMPRESS_RESPONSE = True
 UNICODE = UTF-8
-PREPARE_CURL_CALLBACK = True
+PREPARE_CURL_CALLBACK = False
 
 [proxy]
 PROXY_URL =
