--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -206,6 +206,8 @@ http {
             proxy_pass_header x-kujonrefresh;
             proxy_pass https://kujon-api-demo;
             proxy_pass_header x-correlation-id;
+            proxy_pass_header x-frame-options;
+            proxy_pass_header x-xss-protection;
         }
     }
 
