fix #554 fix deploy scripts

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -113,6 +113,8 @@ http {
             proxy_set_header X-Scheme $scheme;
             proxy_pass https://kujon-web;
             proxy_pass_header x-correlation-id;
+            proxy_pass_header x-frame-options;
+            proxy_pass_header x-xss-protection;
         }
     }
 
@@ -135,6 +137,8 @@ http {
             proxy_pass_header x-kujonrefresh;
             proxy_pass https://kujon-api;
             proxy_pass_header x-correlation-id;
+            proxy_pass_header x-frame-options;
+            proxy_pass_header x-xss-protection;
         }
     }
 
@@ -155,6 +159,8 @@ http {
             proxy_set_header X-Scheme $scheme;
             proxy_pass_header X-Hub-Signature;
             proxy_pass https://kujon-event;
+            proxy_pass_header x-frame-options;
+            proxy_pass_header x-xss-protection;
         }
     }
 
@@ -184,6 +190,8 @@ http {
             proxy_set_header X-Scheme $scheme;
             proxy_pass https://kujon-web-demo;
             proxy_pass_header x-correlation-id;
+            proxy_pass_header x-frame-options;
+            proxy_pass_header x-xss-protection;
         }
     }
  
@@ -228,6 +236,8 @@ http {
             proxy_set_header X-Scheme $scheme;
             proxy_pass_header X-Hub-Signature;
             proxy_pass https://kujon-event-demo;
+            proxy_pass_header x-frame-options;
+            proxy_pass_header x-xss-protection;
         }
     }
 
@@ -248,6 +258,8 @@ http {
             proxy_set_header X-Scheme $scheme;
             proxy_pass_header X-Hub-Signature;
             proxy_pass https://kujon-admin-demo;
+            proxy_pass_header x-frame-options;
+            proxy_pass_header x-xss-protection;
         }
     }
 
