--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -115,6 +115,9 @@ http {
             proxy_pass_header x-correlation-id;
             proxy_pass_header x-frame-options;
             proxy_pass_header x-xss-protection;
+            proxy_pass_header content-security-policy;
+            proxy_pass_header strict-transport-security;
+
         }
     }
 
@@ -139,6 +142,8 @@ http {
             proxy_pass_header x-correlation-id;
             proxy_pass_header x-frame-options;
             proxy_pass_header x-xss-protection;
+            proxy_pass_header content-security-policy;
+            proxy_pass_header strict-transport-security;
         }
     }
 
@@ -161,6 +166,8 @@ http {
             proxy_pass https://kujon-event;
             proxy_pass_header x-frame-options;
             proxy_pass_header x-xss-protection;
+            proxy_pass_header content-security-policy;
+            proxy_pass_header strict-transport-security;
         }
     }
 
@@ -192,6 +199,8 @@ http {
             proxy_pass_header x-correlation-id;
             proxy_pass_header x-frame-options;
             proxy_pass_header x-xss-protection;
+            proxy_pass_header content-security-policy;
+            proxy_pass_header strict-transport-security;
         }
     }
  
@@ -216,6 +225,8 @@ http {
             proxy_pass_header x-correlation-id;
             proxy_pass_header x-frame-options;
             proxy_pass_header x-xss-protection;
+            proxy_pass_header content-security-policy;
+            proxy_pass_header strict-transport-security;
         }
     }
 
