poprawa konfiguracji nginxa - headery security dodanie skryptów pomocnych do kalendarza google

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -24,6 +24,10 @@ http {
         server 127.0.0.1:8004;
     }
 
+    upstream kujon-admin {
+        server 127.0.0.1:8005;
+    }
+
     upstream kujon-web-demo {
         server 127.0.0.1:9002;
     }
@@ -77,7 +81,8 @@ http {
 
     add_header X-Content-Type-Options nosniff;
     add_header X-Frame-Options DENY;
-    
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+    add_header X-Xss-Protection "1; mode=block" always;
 
     server {
         listen 80;
@@ -168,6 +173,28 @@ http {
             proxy_pass_header x-xss-protection;
             proxy_pass_header content-security-policy;
             proxy_pass_header strict-transport-security;
+        }
+    }
+
+    server {
+        listen 443 ssl;
+        listen [::]:443 ssl;
+        server_tokens off;
+        server_name admin.kujon.mobi;
+
+        access_log /var/log/nginx/access-kujon-prod.log;
+        error_log /var/log/nginx/error-kujon-prod.log;
+
+        location / {
+            # proxy_pass_header Server;
+            proxy_set_header Host $http_host;
+            proxy_redirect off;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Scheme $scheme;
+            proxy_pass_header X-Hub-Signature;
+            proxy_pass https://kujon-admin;
+            proxy_pass_header x-frame-options;
+            proxy_pass_header x-xss-protection;
         }
     }
 
@@ -273,5 +300,4 @@ http {
             proxy_pass_header x-xss-protection;
         }
     }
-
 }
