dodanie skryptów pomocnych do kalendarza google

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -82,7 +82,9 @@ http {
     add_header X-Content-Type-Options nosniff;
     add_header X-Frame-Options DENY;
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-    add_header X-Xss-Protection "1; mode=block" always;
+    add_header Public-Key-Pins 'pin-sha256="MyDXV2f+ttUxzDJXEMOcD12I0jRC7evlxEWws81AKrM=" max-age=51814';
+    add_header Content-Security-Policy "'script-src 'self' 'unsafe-inline' 'unsafe-eval' ; connect-src 'self' api-demo.kujon.mobi api.kujon.mobi; style-src 'self' 'unsafe-inline' *.googleapis.com; font-src 'self' 'unsafe-inline' *.gstatic.com; '" always;
+
 
     server {
         listen 80;
@@ -118,11 +120,6 @@ http {
             proxy_set_header X-Scheme $scheme;
             proxy_pass https://kujon-web;
             proxy_pass_header x-correlation-id;
-            proxy_pass_header x-frame-options;
-            proxy_pass_header x-xss-protection;
-            proxy_pass_header content-security-policy;
-            proxy_pass_header strict-transport-security;
-
         }
     }
 
@@ -145,10 +142,6 @@ http {
             proxy_pass_header x-kujonrefresh;
             proxy_pass https://kujon-api;
             proxy_pass_header x-correlation-id;
-            proxy_pass_header x-frame-options;
-            proxy_pass_header x-xss-protection;
-            proxy_pass_header content-security-policy;
-            proxy_pass_header strict-transport-security;
         }
     }
 
@@ -169,10 +162,6 @@ http {
             proxy_set_header X-Scheme $scheme;
             proxy_pass_header X-Hub-Signature;
             proxy_pass https://kujon-event;
-            proxy_pass_header x-frame-options;
-            proxy_pass_header x-xss-protection;
-            proxy_pass_header content-security-policy;
-            proxy_pass_header strict-transport-security;
         }
     }
 
@@ -193,8 +182,6 @@ http {
             proxy_set_header X-Scheme $scheme;
             proxy_pass_header X-Hub-Signature;
             proxy_pass https://kujon-admin;
-            proxy_pass_header x-frame-options;
-            proxy_pass_header x-xss-protection;
         }
     }
 
@@ -224,10 +211,6 @@ http {
             proxy_set_header X-Scheme $scheme;
             proxy_pass https://kujon-web-demo;
             proxy_pass_header x-correlation-id;
-            proxy_pass_header x-frame-options;
-            proxy_pass_header x-xss-protection;
-            proxy_pass_header content-security-policy;
-            proxy_pass_header strict-transport-security;
         }
     }
  
@@ -250,10 +233,6 @@ http {
             proxy_pass_header x-kujonrefresh;
             proxy_pass https://kujon-api-demo;
             proxy_pass_header x-correlation-id;
-            proxy_pass_header x-frame-options;
-            proxy_pass_header x-xss-protection;
-            proxy_pass_header content-security-policy;
-            proxy_pass_header strict-transport-security;
         }
     }
 
@@ -274,8 +253,6 @@ http {
             proxy_set_header X-Scheme $scheme;
             proxy_pass_header X-Hub-Signature;
             proxy_pass https://kujon-event-demo;
-            proxy_pass_header x-frame-options;
-            proxy_pass_header x-xss-protection;
         }
     }
 
@@ -296,8 +273,6 @@ http {
             proxy_set_header X-Scheme $scheme;
             proxy_pass_header X-Hub-Signature;
             proxy_pass https://kujon-admin-demo;
-            proxy_pass_header x-frame-options;
-            proxy_pass_header x-xss-protection;
         }
     }
 }
