final nginx configuration

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -81,10 +81,9 @@ http {
 
     add_header X-Content-Type-Options nosniff;
     add_header X-Frame-Options DENY;
+    add_header X-Xss-Protection "1; mode=block" always;
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-    add_header Public-Key-Pins 'pin-sha256="MyDXV2f+ttUxzDJXEMOcD12I0jRC7evlxEWws81AKrM=" max-age=51814';
-    add_header Content-Security-Policy "'script-src 'self' 'unsafe-inline' 'unsafe-eval' ; connect-src 'self' api-demo.kujon.mobi api.kujon.mobi; style-src 'self' 'unsafe-inline' *.googleapis.com; font-src 'self' 'unsafe-inline' *.gstatic.com; '" always;
-
+    add_header Content-Security-Policy "script-src 'self' 'unsafe-inline' 'unsafe-eval' ; connect-src 'self' api-demo.kujon.mobi api.kujon.mobi; style-src 'self' 'unsafe-inline' *.googleapis.com; font-src 'self' 'unsafe-inline' *.gstatic.com; " always;
 
     server {
         listen 80;
