--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -85,6 +85,7 @@ http {
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
     add_header Content-Security-Policy "script-src 'self' 'unsafe-inline' 'unsafe-eval' ; connect-src 'self' api-demo.kujon.mobi api.kujon.mobi; style-src 'self' 'unsafe-inline' *.googleapis.com; font-src 'self' 'unsafe-inline' *.gstatic.com; " always;
 
+
     server {
         listen 80;
         listen [::]:80 ipv6only=on;	
@@ -181,6 +182,8 @@ http {
             proxy_set_header X-Scheme $scheme;
             proxy_pass_header X-Hub-Signature;
             proxy_pass https://kujon-admin;
+            auth_basic "Restricted Content";
+            auth_basic_user_file /etc/nginx/.htpasswd;
         }
     }
 
@@ -272,6 +275,9 @@ http {
             proxy_set_header X-Scheme $scheme;
             proxy_pass_header X-Hub-Signature;
             proxy_pass https://kujon-admin-demo;
+            auth_basic "Restricted Content";
+            auth_basic_user_file /etc/nginx/.htpasswd;
         }
     }
 }
+
