--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -129,6 +129,8 @@ http {
 	server_tokens off;
         server_name api.kujon.mobi;
 
+        client_max_body_size 10M;
+
         access_log /var/log/nginx/access-kujon-prod.log;
         error_log /var/log/nginx/error-kujon-prod.log;
 
@@ -221,7 +223,9 @@ http {
         listen [::]:443 ssl;
         server_tokens off;
         server_name api-demo.kujon.mobi;
-        
+    
+        client_max_body_size 10M;
+    
         access_log /var/log/nginx/access-kujon-demo.log;
         error_log /var/log/nginx/error-kujon-demo.log; 
 
