--- a/config/settings-demo.conf
+++ b/config/settings-demo.conf
@@ -61,7 +61,7 @@ DEVELOPMENT = False
 
 [notification]
 APPLICATION_ID = f01a20f9-bbe7-4c89-a017-bf8930c61cf4
-AUTHORIZATION = 'Basic NTdhODU0YjAtOTZhNy00YWRlLTgyYTktZWI3NDlkYTM2ZTEx'
+AUTHORIZATION = Zjk2M2U1ZDQtM2E3My00NjdhLTk3N2MtOGUyNzA0MDFhNTZk
 
 [clamav]
 CLAM_EICAR_SIGNATURE = X5O!P%@AP[4\PZX54(P^)7CC)7}$EICAR-STANDARD-ANTIVIRUS-TEST-FILE!$H+H*
