--- a/config/settings-prod.conf
+++ b/config/settings-prod.conf
@@ -1,5 +1,5 @@
 [database]
-MONGODB_URI = mongodb://kujprod:4567GhdF13Kd@localhost:9999/kujon-prod
+MONGODB_URI = mongodb://kujprod:4567GhdF13Kd@localhost/kujon-prod
 MONGODB_NAME = kujon-prod
 
 [application]
