--- a/web/static/bower.json
+++ b/web/static/bower.json
@@ -25,14 +25,18 @@
     "bootstrap": "^3.3.7",
     "crossroads": "^0.12.2",
     "hasher": "^1.2.0",
-    "requirejs": "^2.2.0",
+    "requirejs": "^2.3.2",
     "text": "^2.0.15",
     "handlebars": "^4.0.5",
-    "fullcalendar": "^2.9.1",
-    "datatables": "^1.10.12",
-    "font-awesome": "^4.6.3",
+    "fullcalendar": "^3.1.0",
+    "datatables": "^1.10.13",
+    "font-awesome": "^4.7.0",
     "respond": "^1.4.2",
     "html5shiv": "^3.7.3",
     "jquery.cookiebar": "^1.2.1"
+  },
+  "resolutions": {
+    "fullcalendar": "^3.1.0",
+    "jquery": ">= 1.2.1"
   }
 }
