fix deploy event url -> double // error

--- a/config/settings-dev.conf
+++ b/config/settings-dev.conf
@@ -37,7 +37,7 @@ DEPLOY_WEB = http://localhost:8888
 CALLBACK_URL = http://localhost:8881/authentication/verify
 
 EVENT_PORT = 8882
-DEPLOY_EVENT =  https://event-demo.kujon.mobi/
+DEPLOY_EVENT =  https://event-demo.kujon.mobi
 LOG_LEVEL = DEBUG
 
 ADMIN_PORT = 8883
