--- a/config/kujonmobi-prod.conf
+++ b/config/kujonmobi-prod.conf
@@ -1,5 +1,5 @@
 [group:kujon-prod]
-programs = kujon-prod-api,kujon-prod-web,kujon-prod-event,kujon-prod-crawler,kujon-prod-emailer
+programs = kujon-prod-api,kujon-prod-web,kujon-prod-event,kujon-prod-crawler,kujon-prod-admin
 
 [program:kujon-prod-api]
 command=/usr/bin/python3 /home/appuser/prod.kujon.mobi/current/api/server.py --environment=production
@@ -53,8 +53,8 @@ stopwaitsecs=10
 stopasgroup = true
 killasgroup = true
 
-[program:kujon-prod-emailer]
-command=/usr/bin/python3 /home/appuser/prod.kujon.mobi/current/crawler/emailer.py --environment=production
+[program:kujon-prod-admin]
+command=/usr/bin/python3 /home/appuser/prod.kujon.mobi/current/admin/server.py --environment=production
 user=appuser
 environment=HOME="/home/appuser/prod.kujon.mobi",USER="appuser",PYTHONPATH=/home/appuser/prod.kujon.mobi/current
 stderr_logfile = /home/appuser/prod.kujon.mobi/log/%(program_name)s-err.log
@@ -66,9 +66,10 @@ stopwaitsecs=10
 stopasgroup = true
 killasgroup = true
 
+
 ########## DEMO ###########
 [group:kujon-demo]
-programs = kujon-demo-api,kujon-demo-web,kujon-demo-event,kujon-demo-crawler,kujon-demo-emailer,kujon-demo-admin
+programs = kujon-demo-api,kujon-demo-web,kujon-demo-event,kujon-demo-crawler,kujon-demo-admin
 
 [program:kujon-demo-api]
 command=/usr/bin/python3 /home/appuser/demo.kujon.mobi/current/api/server.py --environment=demo
@@ -119,19 +120,6 @@ logfile_maxbytes = 10MB
 logfile_backups = 50
 stopsignal = INT
 stopwaitsecs = 10
-stopasgroup = true
-killasgroup = true
-
-[program:kujon-demo-emailer]
-command=/usr/bin/python3 /home/appuser/demo.kujon.mobi/current/crawler/emailer.py --environment=demo
-user=appuser
-environment=HOME="/home/appuser/demo.kujon.mobi",USER="appuser",PYTHONPATH=/home/appuser/demo.kujon.mobi/current
-stderr_logfile = /home/appuser/demo.kujon.mobi/log/%(program_name)s-err.log
-stdout_logfile = /home/appuser/demo.kujon.mobi/log/%(program_name)s-out.log
-logfile_maxbytes = 10MB
-logfile_backups = 50
-stopsignal=INT
-stopwaitsecs=10
 stopasgroup = true
 killasgroup = true
 
