add fake harder of server to nginx

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -67,6 +67,7 @@ http {
     proxy_next_upstream error;
 
     server_tokens off;
+    more_set_headers 'Server: Apache';
     ssl_session_cache   shared:SSL:10m;
     ssl_session_timeout 10m;
     ssl_certificate      /etc/ssl/kujon.mobi.withroot.cert;
@@ -99,6 +100,7 @@ http {
         listen 443 ssl;
         listen [::]:443 ssl;
         server_tokens off;
+        more_set_headers 'Server: Apache';
         server_name kujon.mobi;
 
         access_log /var/log/nginx/access-kujon-prod.log;
@@ -126,7 +128,8 @@ http {
     server {
         listen 443 ssl;
         listen [::]:443 ssl;
-	server_tokens off;
+	    server_tokens off;
+        more_set_headers 'Server: Apache';
         server_name api.kujon.mobi;
 
         client_max_body_size 15M;
@@ -151,6 +154,7 @@ http {
         listen 443 ssl;
         listen [::]:443 ssl;
         server_tokens off;
+        more_set_headers 'Server: Apache';
         server_name event.kujon.mobi;
 
         access_log /var/log/nginx/access-kujon-prod.log;
@@ -171,6 +175,7 @@ http {
         listen 443 ssl;
         listen [::]:443 ssl;
         server_tokens off;
+        more_set_headers 'Server: Apache';
         server_name admin.kujon.mobi;
 
         access_log /var/log/nginx/access-kujon-prod.log;
@@ -195,6 +200,7 @@ http {
         listen 443 ssl;
         listen [::]:443 ssl;
         server_tokens off;
+        more_set_headers 'Server: Apache';
         server_name demo.kujon.mobi;
 
         access_log /var/log/nginx/access-kujon-demo.log;
@@ -222,6 +228,7 @@ http {
         listen 443 ssl;
         listen [::]:443 ssl;
         server_tokens off;
+        more_set_headers 'Server: Apache';
         server_name api-demo.kujon.mobi;
     
         client_max_body_size 10M;
@@ -246,6 +253,7 @@ http {
         listen 443 ssl;
         listen [::]:443 ssl;
         server_tokens off;
+        more_set_headers 'Server: Apache';
         server_name event-demo.kujon.mobi;
 
         access_log /var/log/nginx/access-kujon-demo.log;
@@ -266,6 +274,7 @@ http {
         listen 443 ssl;
         listen [::]:443 ssl;
         server_tokens off;
+        more_set_headers 'Server: Apache';
         server_name admin-demo.kujon.mobi;
 
         access_log /var/log/nginx/access-kujon-demo.log;
