--- a/config/kujonmobi-prod.conf
+++ b/config/kujonmobi-prod.conf
@@ -1,5 +1,5 @@
 [group:kujon-prod]
-programs = kujon-prod-api,kujon-prod-web,kujon-prod-event,kujon-prod-crawler,kujon-prod-admin
+programs = kujon-prod-api,kujon-prod-web,kujon-prod-event,kujon-prod-admin
 
 [program:kujon-prod-api]
 command=/usr/bin/python3 /home/appuser/prod.kujon.mobi/current/api/server.py --environment=production
@@ -40,19 +40,6 @@ stopwaitsecs=10
 stopasgroup = true
 killasgroup = true
 
-[program:kujon-prod-crawler]
-command=/usr/bin/python3 /home/appuser/prod.kujon.mobi/current/crawler/usos_crawler.py --environment=production
-user=appuser
-environment=HOME="/home/appuser/prod.kujon.mobi",USER="appuser",PYTHONPATH=/home/appuser/prod.kujon.mobi/current
-stderr_logfile = /home/appuser/prod.kujon.mobi/log/%(program_name)s-err.log
-stdout_logfile = /home/appuser/prod.kujon.mobi/log/%(program_name)s-out.log
-logfile_maxbytes = 10MB
-logfile_backups = 50
-stopsignal=INT
-stopwaitsecs=10
-stopasgroup = true
-killasgroup = true
-
 [program:kujon-prod-admin]
 command=/usr/bin/python3 /home/appuser/prod.kujon.mobi/current/admin/server.py --environment=production
 user=appuser
@@ -69,7 +56,7 @@ killasgroup = true
 
 ########## DEMO ###########
 [group:kujon-demo]
-programs = kujon-demo-api,kujon-demo-web,kujon-demo-event,kujon-demo-crawler,kujon-demo-admin
+programs = kujon-demo-api,kujon-demo-web,kujon-demo-event,kujon-demo-admin
 
 [program:kujon-demo-api]
 command=/usr/bin/python3 /home/appuser/demo.kujon.mobi/current/api/server.py --environment=demo
@@ -99,19 +86,6 @@ killasgroup = true
 
 [program:kujon-demo-event]
 command=/usr/bin/python3 /home/appuser/demo.kujon.mobi/current/event/server.py --environment=demo
-user=appuser
-environment=HOME="/home/appuser/demo.kujon.mobi",USER="appuser",PYTHONPATH=/home/appuser/demo.kujon.mobi/current
-stderr_logfile = /home/appuser/demo.kujon.mobi/log/%(program_name)s-err.log
-stdout_logfile = /home/appuser/demo.kujon.mobi/log/%(program_name)s-out.log
-logfile_maxbytes = 10MB
-logfile_backups = 50
-stopsignal = INT
-stopwaitsecs = 10
-stopasgroup = true
-killasgroup = true
-
-[program:kujon-demo-crawler]
-command=/usr/bin/python3 /home/appuser/demo.kujon.mobi/current/crawler/usos_crawler.py --environment=demo
 user=appuser
 environment=HOME="/home/appuser/demo.kujon.mobi",USER="appuser",PYTHONPATH=/home/appuser/demo.kujon.mobi/current
 stderr_logfile = /home/appuser/demo.kujon.mobi/log/%(program_name)s-err.log
